se agrego candy&snack store en el nav

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,6 +22,7 @@
       <div style="position: relative; top: 5px" class="d-flex ms-5">
         <p routerLink="/" class="pButtons mx-3">INICIO</p>
         <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
+        <p routerLink="/store" class="pButtons mx-3">CANDY & SNACK STORE</p>
         <p class="pButtons mx-3">FAQS</p>
       </div>
     </div>
