--- a/src/app/components/reserva/historial-reserva/historial-reserva.component.html
+++ b/src/app/components/reserva/historial-reserva/historial-reserva.component.html
@@ -22,12 +22,19 @@
                 <tbody>
                   <tr>
                     <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="d-flex justify-content-center">
-                        <button type="button" class="btn btn-danger zoom" (click)="cancelarReserva()">Cancelar</button>
-                    </td>
+                    <!--<div *ngFor="let reserva of reservas">
+                      <td>{{reserva.pelicula}}</td>
+                      <td>{{reserva.asiento}}</td>
+                      <td>{{reserva.fechaFuncion}}</td>
+                      <td>{{reserva.candySnack}}</td>-->
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td class="d-flex justify-content-center">
+                          <button type="button" class="btn btn-danger zoom" (click)="cancelarReserva()">Cancelar</button>
+                      </td>
+                    <!--</div>-->
+                    
                   </tr>
                 </tbody>
               </table>
