--- a/src/app/components/reserva/reserva.component.css
+++ b/src/app/components/reserva/reserva.component.css
@@ -26,11 +26,23 @@
     color: #F5F5F5;
   }
 
+  .info-item {
+    border: 1px solid black;
+  }
+
+  .item {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:small;
+  }
+
   .pantalla{
     font-size: 50px;
-    padding-left:20% ;
-    padding-right: 20%;
-    padding-top: 5%;
+    padding-left:40% ;
+    padding-right: 40%;
+    padding-top: 10%;
     padding-bottom: 5%;
   }
 
@@ -40,4 +52,27 @@
 
   .zoom{
     font-size: 20px;
+  }
+  .card{
+    background-color: #020d18;
+    color: #fff;
+    border: 1px solid black;
+  }
+
+  .card-body>h5, .card-body>p{
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+
+  }
+  .butacas{
+
+    display: grid;
+    grid-template-columns: 3;
+
+  }
+
+  .btn-butaca{
+    font-size:1.3rem;
+    width:38px ;
   }
