--- a/src/app/components/admin/funciones-admin/funciones-admin.component.html
+++ b/src/app/components/admin/funciones-admin/funciones-admin.component.html
@@ -68,5 +68,7 @@
   <app-modal-eliminar-pelicula
     [pelicula]="peliculaElegida"
   ></app-modal-eliminar-pelicula>
-  <app-modal-funciones-pelicula></app-modal-funciones-pelicula>
+  <app-modal-funciones-pelicula
+    [idPelicula]="peliculaElegida.id"
+  ></app-modal-funciones-pelicula>
 </div>
