--- a/src/app/components/admin/funciones-admin/modal-detalles-pelicula/modal-detalles-pelicula.component.html
+++ b/src/app/components/admin/funciones-admin/modal-detalles-pelicula/modal-detalles-pelicula.component.html
@@ -1,4 +1,4 @@
-<app-modal-general [target]="target" [titulo]="titulo" [cerrarAction]="true">
+<app-modal-general [target]="target" [titulo]="titulo" [cerrarButton]="true">
   <table class="table detalles-pelicula">
     <tbody>
       <tr>
