--- a/src/app/components/admin/funciones-admin/modal-nueva-pelicula/modal-nueva-pelicula.component.html
+++ b/src/app/components/admin/funciones-admin/modal-nueva-pelicula/modal-nueva-pelicula.component.html
@@ -1,3 +1,3 @@
 <app-modal-general [target]="target" [titulo]="titulo">
-  <app-formulario-pelicula></app-formulario-pelicula>
+  <app-formulario-pelicula [pelicula]="pelicula"></app-formulario-pelicula>
 </app-modal-general>
