--- a/src/app/components/modal-general/modal-general.component.html
+++ b/src/app/components/modal-general/modal-general.component.html
@@ -20,7 +20,7 @@
         </button>
       </div>
       <div class="modal-body"><ng-content></ng-content></div>
-      <div class="modal-footer" *ngIf="cerrarAction">
+      <div class="modal-footer" *ngIf="cerrarButton">
         <ng-container>
           <button type="button" class="btn btn-primary" data-dismiss="modal">
             Cerrar
