--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -24,6 +24,7 @@
         <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
         <p routerLink="/store" class="pButtons mx-3">CANDY & SNACK STORE</p>
         <p class="pButtons mx-3">FAQS</p>
+        <p *ngIf="administradorRole"><app-navbar-admin></app-navbar-admin></p>
       </div>
     </div>
 
