--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,67 +1,47 @@
 <nav class="navContainer container-fluid fixed-top p-3 nav-background">
-  <div class="d-flex flex-row justify-content-between align-items-center">
-    <div class="d-flex align-items-center">
-      <div routerLink="/" class="navbar-header logo">
-        <div
-          class="navbar-toggle"
-          data-toggle="collapse"
-          data-target="#bs-example-navbar-collapse-1"
-        >
-          <span class="sr-only">Toggle navigation</span>
-          <div id="nav-icon1">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+    <div class="d-flex flex-row justify-content-between align-items-center">
+        <div class="d-flex align-items-center">
+            <div routerLink="/" class="navbar-header logo">
+                <div class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <div id="nav-icon1">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <a href="javascript:void(0);"><img class="logo" src="assets/images/logo1.png" alt="" width="80" /></a>
+            </div>
+
+            <div style="position: relative; top: 5px" class="d-flex ms-5">
+                <p routerLink="/" class="pButtons mx-3">INICIO</p>
+                <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
+                <p routerLink="/store" class="pButtons mx-3">CANDY & SNACK STORE</p>
+                <p class="pButtons mx-3">FAQS</p>
+            </div>
         </div>
-        <a href="javascript:void(0);"
-          ><img class="logo" src="assets/images/logo1.png" alt="" width="80"
-        /></a>
-      </div>
 
-      <div style="position: relative; top: 5px" class="d-flex ms-5">
-        <p routerLink="/" class="pButtons mx-3">INICIO</p>
-        <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
-        <p routerLink="/store" class="pButtons mx-3">CANDY & SNACK STORE</p>
-        <p class="pButtons mx-3">FAQS</p>
-      </div>
-    </div>
+        <div class="w-50" *ngIf="buscador == true">
+            <form style="width: 100%" [formGroup]="formBusqueda" (ngSubmit)="mostrarBusqueda()">
+                <input type="text" class="input-busqueda-inicio" formControlName="titulo" placeholder="Busca la pelicula que quieras ver" />
+                <input type="submit" value="" class="hidden" />
+            </form>
+        </div>
+        <div style="position: relative; top: 5px" class="d-flex">
+            <p href="javascript:void(0);" *ngIf="buscador == false" (click)="buscador = true" class="pButtons mx-3">
+                BUSCAR
+            </p>
+            <p class="pButtons mx-3" *ngIf="buscador == true" href="javascript:void(0);" (click)="buscador = false">
+                CANCELAR
+            </p>
 
-    <div class="w-50" *ngIf="buscador == true">
-      <form
-        style="width: 100%"
-        [formGroup]="formBusqueda"
-        (ngSubmit)="mostrarBusqueda()"
-      >
-        <input
-          type="text"
-          class="input-busqueda-inicio"
-          formControlName="titulo"
-          placeholder="Busca la pelicula que quieras ver"
-        />
-        <input type="submit" value="" class="hidden" />
-      </form>
+            <p routerLink="/login" class="pButtons mx-3">INICIAR SESIÓN</p>
+            <p routerLink="/login" class="pButtons mx-3">REGISTRO</p>
+            <p routerLink="/carrito" class="pButtons mx-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart bi-cart-mb" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </svg>
+            </p>
+        </div>
     </div>
-    <div style="position: relative; top: 5px" class="d-flex">
-      <p
-        href="javascript:void(0);"
-        *ngIf="buscador == false"
-        (click)="buscador = true"
-        class="pButtons mx-3"
-      >
-        BUSCAR
-      </p>
-      <p
-        class="pButtons mx-3"
-        *ngIf="buscador == true"
-        href="javascript:void(0);"
-        (click)="buscador = false"
-      >
-        CANCELAR
-      </p>
-
-      <p routerLink="/login" class="pButtons mx-3">INICIAR SESIÓN</p>
-      <p routerLink="/login" class="pButtons mx-3">REGISTRO</p>
-    </div>
-  </div>
 </nav>
